--- a/changgou_gateway/changgou_gateway_system/src/main/resources/application.yml
+++ b/changgou_gateway/changgou_gateway_system/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: sysgateway
+  redis:
+    host: 192.168.200.128
+    port: 6379
   cloud:
     gateway:
       globalcors:
@@ -19,6 +22,11 @@ spring:
             - Path=/goods/**
           filters:
             - StripPrefix= 1
+            - name: RequestRateLimiter #请求数限流 名字不能随便写
+              args:
+                key-resolver: "#{@ipKeyResolver}"
+                redis-rate-limiter.replenishRate: 1 #令牌桶每秒填充平均速率
+                redis-rate-limiter.burstCapacity: 1 #令牌桶总容量
         - id: system
           uri: lb://system
           predicates:
