--- a/changgou_gateway/changgou_gateway_system/pom.xml
+++ b/changgou_gateway/changgou_gateway_system/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
             <version>2.1.3.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
     </dependencies>
 
 </project>
